package com.example.personal_budget.service;

public class BudgetService {

}
